# PCINFO2016

./: Analise Sequencial.txt  Dados_Montanha-Russa-com-Memória-Distribuída.xlsx  Montanha-Russa-com-Memória-Compartilhada.doc  Montanha-Russa-com-Memória-Distribuída.doc  Montanha-Russa-com-Memória-Distribuída.docx  README.md
MontanhaRussaSeq/: MontanhaRussaSeq.depend  MontanhaRussaSeq.layout  main.c
MontanhaRussaSeq - Arrumado/: MontanhaRussaSeq.cbp  MontanhaRussaSeq.depend  main.c
MontanhaRussa_MPI/: CMakeLists.txt  main  main.c  perf.data  perf.data.old  teste  teste.c
MontanhaRussa_Seq/: MontanhaRussaSeq.layout  main  main.c  main.s
MontanhaRussa_Thread/: CMakeLists.txt  main  main.c  main.cpp  main.s
